@@ -2,3 +2,9 @@
 When you are trying to dodge, your dodge skill is decreased by encumbrance level of that body part.
 
 * Reinforcing armor does not provide bash and cut protection bonus anymore
+
+* Some creatures are attracted to the smell of damaged body parts and will prefer to attack them
+
+
+TODO:
+Creatures should have mutations too
